--- a/CSS/style_home.css
+++ b/CSS/style_home.css
@@ -11,6 +11,7 @@ html
     box-sizing: border-box;
 }
 
+/*
 *,
 *:before,
 *:after
@@ -19,7 +20,7 @@ html
     padding: 0;
     margin: 0;
     letter-spacing: 1.1px;
-}
+}*/
 
 header
 {
@@ -90,6 +91,6 @@ header
 #all
 {
     width: 100%;
-    height: 600px;
+    height: 607px;
     background: #777;
 }
